Fix bugs generating PDF on Cocoa

Provide real implementations of:
	properties(), faceId() and getUnscaledGlyph

Task-number: QTBUG-10094
Change-Id: I5899f247742406de53c68c5cd04fee6fb9b6b7d2
Reviewed-by: Morten Johan Sørvig <morten.sorvig@digia.com>
Reviewed-by: Konstantin Ritt <ritt.ks@gmail.com>

cregit: 517fb9026896f7ac20376f253babae5a7c57721d https://github.com/qt/qtbase/commit/517fb9026896f7ac20376f253babae5a7c57721d